# rust-poc

./: .env  .gitignore  Cargo.toml  Dockerfile  ReqAuthDetails.xml  RespPay.xml  changes  docker-compose.yml  flamegraph-output.html  install.sh  modle.xml  perf.data  private_key.pem  public_key.pem  reqPay.xml
src/: a.rs  callback.rs  compression.rs  credit_req.rs  custom_error.rs  debit_req.rs  http_utils.rs  kafka.rs  main.rs  models.rs  req_auth_details_creator.rs  resp_pay.rs  rufModel.rs  sign.rs  signature.rs  validate_psp.rs  validate_request.rs
src/config/: config.rs  mod.rs
src/handlers/: handlers.rs  mod.rs
src/models/: mod.rs  payees.rs  reqAuthDetails.rs  reqpay.rs
src/models/reqpay/: payees.rs  payers.rs  respAuth.rs
src/utils/: http_utils.rs  mod.rs  signature.rs  xml_signature.rs
src/validation/: mod.rs  validations.rs
