[package]
name = "rust-pro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
futures = "0.3"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5"
quick-xml = { version = "0.31.0", features = ["serialize"] }
base64 = "0.13"
once_cell = "1.18.0"
lazy_static = "1.4.0"
sha2 = "0.10.8"
rsa = "0.9.4"
rand = "0.8.5"
xml-rs = "0.8.19"
tokio = "1.34.0"
env_logger = "0.10.1"
log = "0.4.20"
dotenv = "0.15.0"
